--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="dropped">Dropped</string>
     <string name="plan_to_watch">Plan to Watch</string>
     <string name="empty_anime_list">No anime found</string>
+    <string name="scroll_to_top">Scroll to top</string>
 </resources>
